--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@
 ################################################################################
 baseURL = 'https://www.shrikebyte.com/'
 languageCode = 'en-us'
-title = 'Shrikebyte'
+title = 'shrikebyte'
 copyright = '© Shrikebyte, LLC'
 theme = 'PaperMod'
 
@@ -13,9 +13,15 @@ theme = 'PaperMod'
 ################################################################################
 
 [[menu.main]]
+identifier = 'home'
+name = 'Home'
+url = '/'
+weight = 10
+
+[[menu.main]]
 identifier = 'blog'
 name = 'Blog'
-url = 'blog/'
+url = 'posts/'
 weight = 20
 
 [[menu.main]]
@@ -34,28 +40,37 @@ weight = 40
 ################################################################################
 # PaperMod customizations
 ################################################################################
-[params] 
+[params]
 
-ShowReadingTime = true
-ShowBreadCrumbs = true
-ShowCodeCopyButtons = true
-env = 'production'
-logo = '/images/logo.png'
+  ShowReadingTime = true
+  #ShowBreadCrumbs = true
+  ShowCodeCopyButtons = true
+  env = 'production'
+  ShowToc = true
+  label.icon = 'logo.png'
 
-description = 'This is my website'
+  # Disable the automatic post listing from the homepage
+  mainSections = []
 
-# Search-related options
-[params.fuseOpts]
-isCaseSensitive = false
-shouldSort = true
-location = 0
-distance = 1000
-threshold = 0.4
-minMatchCharLength = 0
-# limit = 10 # refer: https://www.fusejs.io/api/methods.html#search
-keys = ["title", "permalink", "summary", "content"]
+  [params.assets]
+    favicon = "/favicon/favicon.ico"
+    favicon16x16 = "/favicon/favicon-16x16.png"
+    favicon32x32 = "/favicon/favicon-32x32.png"
+    apple_touch_icon = "/favicon/apple-touch-icon.png"
+
+
+  # Search-related options
+  [params.fuseOpts]
+    isCaseSensitive = false
+    shouldSort = true
+    location = 0
+    distance = 1000
+    threshold = 0.4
+    minMatchCharLength = 0
+    # limit = 10 # refer: https://www.fusejs.io/api/methods.html#search
+    keys = ["title", "permalink", "summary", "content"]
 
 
 # Need to add this section for search to work
 [outputs]
-home = [ 'HTML', 'RSS', 'JSON' ]
+  home = [ 'HTML', 'RSS', 'JSON' ]
