Added github link.

--- a/hugo.toml
+++ b/hugo.toml
@@ -36,6 +36,11 @@ theme = 'PaperMod'
   url = 'search/'
   weight = 40
 
+[[menu.main]]
+  identifier = 'github'
+  name = 'Github'
+  url = 'https://github.com/shrikebyte'
+  weight = 50
 
 ################################################################################
 # PaperMod customizations
